--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Secure File Transfer
+name: CI/CD for Secure File Transfer
 
 on:
   push:
@@ -9,41 +9,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: ☕ Set up Java 21
+      - name: Setup Java 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: ⚙️ Build with Maven
+      - name: Build JAR
         run: mvn clean package
 
-      - name: 🐳 Build Docker Image
+      - name: Build Docker Image
         run: docker build -t secure-file-app .
 
-      - name: 🖥️ Deploy to EC2 via SSH
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
-          source: "target/secure-file-transfer-0.0.1-SNAPSHOT.jar"
-          target: "/home/ubuntu/"
+      - name: Docker Login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: 🔄 Run Docker on EC2
+      - name: Push Docker Image
+        run: |
+          docker tag secure-file-app ${{ secrets.DOCKER_USERNAME }}/secure-file-app:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/secure-file-app:latest
+
+      - name: SSH to EC2 and Deploy
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/secure-file-app:latest
             docker stop secure-file-app || true
             docker rm secure-file-app || true
-            docker build -t secure-file-app /home/ubuntu/
-            docker run -d -p 8080:8080 --name secure-file-app secure-file-app
+            docker run -d -p 8080:8080 --name secure-file-app ${{ secrets.DOCKER_USERNAME }}/secure-file-app:latest
 
       - name: 🛡️ Run OWASP ZAP Scan
         uses: zaproxy/action-baseline@v0.11.0
